# cppcon2017

./: LICENSE  README.md
examples/: CMakeLists.txt  README.md  build.sh
examples/cmake/: FindThrift.cmake
examples/example1/: CMakeLists.txt  README.md
examples/example1/if/: file1.thrift
examples/example1/normal/: example1_inst-time.txt  example1_time-report.txt  file1_constants_inst-time.txt
examples/example1/templated/: example1_inst-time.txt  example1_time-report.txt  file1_constants_inst-time.txt  file1_data_inst-time.txt  file1_types_inst-time.txt
examples/example2/: CMakeLists.txt  README.md
examples/example2/if/: file20.thrift
examples/example2/normal/: example2_inst-time.txt  example2_time-report.txt  file1_constants_inst-time.txt  file1_data_inst-time.txt  file1_types_inst-time.txt
examples/example2/templated/: example2_inst-time.txt  example2_time-report.txt  file1_constants_inst-time.txt  file1_data_inst-time.txt  file1_types_inst-time.txt
examples/example3/: CMakeLists.txt  README.md
examples/example3/if/: file1.thrift
examples/example3/normal/: example3_time-report.txt  file1_constants_inst-time.txt  file1_data_inst-time.txt  file1_types_inst-time.txt
examples/example3/templated/: example3_time-report.txt  file1_constants_inst-time.txt  file1_data_inst-time.txt  file1_types_inst-time.txt
examples/example4/: CMakeLists.txt  README.md
examples/example4/if/: file1.thrift  struct28.thrift
examples/example4/normal/: example4_time-report.txt  file1_constants_inst-time.txt  file1_data_inst-time.txt  file1_types_inst-time.txt  struct28_types_inst-time.txt
examples/example4/templated/: example4_time-report.txt  file1_constants_inst-time.txt  file1_data_inst-time.txt  file1_types_inst-time.txt  struct28_types_inst-time.txt
examples/example_1/: CMakeLists.txt  README.md
examples/example_1/if/: file1.thrift
examples/fibonacci/: CMakeLists.txt  README.md  fib4-ftime-report.txt  fib4-template-inst-time.txt  fib4.cpp  fib4_inst-time.txt  fib4_time-report.txt  fib80-template-inst-time.txt  fib80.cpp  fib80_inst-time.txt  fib80_time-report.txt  ftime-report-fib4.txt  ftime-report-fib80.txt
examples/fibonacci/profiles/: fib4.cpp.o.trace.pbf  fib80.cpp.o.trace.pbf
examples/thrift_example/: CMakeLists.txt
examples/thrift_example/gen-cpp2/: file12_constants.cpp  file12_constants.h  file12_types.cpp  file12_types.h  file12_types.tcc  file19_constants.cpp  file19_constants.h  file19_data.cpp  file19_types.cpp  file19_types.h  file19_types.tcc  file1_constants.cpp  file1_data.cpp  file1_data.h  file1_types.cpp  file1_types.h  file1_types.tcc  file1_types_custom_protocol.h  file20_constants.cpp  file20_constants.h  file20_data.h  file20_types.cpp  file20_types.h  file20_types.tcc  file27_constants.cpp  file27_constants.h  file27_types.cpp  file27_types.h  file27_types.tcc  file29_constants.cpp  file29_constants.h  file29_data.cpp  file29_types.cpp  file29_types.h  file29_types.tcc  file32_constants.cpp  file32_constants.h  file32_data.cpp  file32_types.cpp  file32_types.h  (+1 more)
examples/thrift_example/if/: file1.thrift  file12.thrift  file13.thrift  file19.thrift  file20.thrift  file22.thrift  file23.thrift  file24.thrift  file25.thrift  file26.thrift  file27.thrift  file28.thrift  file29.thrift  file30.thrift  file31.thrift  file32.thrift  file33.thrift  file34.thrift  file35.thrift  file36.thrift  file37.thrift  file38.thrift  file39.thrift  file40.thrift  file41.thrift  file43.thrift  file45.thrift  file46.thrift  file47.thrift  file49.thrift  file50.thrift  file51.thrift  file52.thrift  file54.thrift  file56.thrift  file57.thrift  file58.thrift  file59.thrift  file60.thrift  file61.thrift  (+18 more)
examples/thrift_example_1/: CMakeLists.txt  README.md
examples/thrift_example_1/gen-templated-cpp2/: file1_types.cpp
examples/thrift_example_1/profiles/: file1_data.cpp.o.memory.trace.pbf  file1_types.cpp.o.memory.trace.pbf  thrift_example_1_inst-time.txte
examples/thrift_example_1/templated_profiles/: file1_constants.cpp.o.memory.trace.pbf  file1_types.cpp.o.memory.trace.pbf  thrift_example_1_templated_inst-time.txt  thrift_example_1_templated_inst-time.txte
examples/thrift_example_2/: CMakeLists.txt  README.md
examples/thrift_example_2/gen-cpp2/: file12_constants.cpp  file12_constants.h  file12_data.cpp  file12_data.h  file19_types.tcc  file1_constants.cpp  file1_types.h  file20_constants.cpp  file20_constants.h  file20_types.h  file27_constants.h  file27_types.cpp  file27_types_custom_protocol.h  file32_data.h  file32_types.h  file32_types.tcc
examples/thrift_example_2/gen-templated-cpp2/: file12_constants.cpp  file12_data.cpp  file12_data.h  file12_types.h  file12_types.tcc  file12_types_custom_protocol.h  file19_data.h  file19_types.h  file19_types_custom_protocol.h  file1_data.cpp  file20_types_custom_protocol.h  file27_constants.cpp  file27_data.cpp  file27_data.h  file29_constants.cpp  file29_types.tcc  file32_constants.h  file32_types.cpp  file32_types.h
examples/thrift_example_2/if/: file1.thrift  file19.thrift
examples/thrift_example_2/profiles/: file12_constants.cpp.o.memory.trace.pbf  file19_constants.cpp.o.memory.trace.pbf  file20_constants.cpp.o.memory.trace.pbf  file20_data.cpp.o.memory.trace.pbf  file27_constants.cpp.o.memory.trace.pbf  file27_data.cpp.o.memory.trace.pbf  file29_constants.cpp.o.memory.trace.pbf  file29_data.cpp.o.memory.trace.pbf  file32_data.cpp.o.memory.trace.pbf  thrift_example_2_inst-time.txte
examples/thrift_example_2/templated_profiles/: file19_data.cpp.o.memory.trace.pbf  file20_constants.cpp.o.memory.trace.pbf  file27_constants.cpp.o.memory.trace.pbf  file27_data.cpp.o.memory.trace.pbf  file27_types.cpp.o.memory.trace.pbf  file29_data.cpp.o.memory.trace.pbf  file32_data.cpp.o.memory.trace.pbf  thrift_example_2_templated_inst-time.txte
examples/thrift_example_3/: CMakeLists.txt
examples/thrift_example_3/gen-cpp2/: file1_data.cpp
examples/thrift_example_3/gen-templated-cpp2/: file1_types.cpp  file1_types.h
examples/thrift_example_4/: CMakeLists.txt
examples/thrift_example_4/gen-cpp2/: file1_types.h  (+3 more)
(+175 files in other folders)
